Work arround https://github.com/spring-projects/spring-security/issues/11822